recebendo parametros na rota

--- a/templates/usuarios.html
+++ b/templates/usuarios.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1> Home - Node  + Express</h1>
+     <h1>Usuarios</h1>
 
-    <a href="/usuarios/30">Ver usuario 30</a>
+    <a href="/usuarios/">Ver usuario 30</a>
 
+     
 </body>
 </html>
